--- a/main.ipynb
+++ b/main.ipynb
@@ -293,7 +293,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_MLP_batch(trainloader, testloader, n_epochs, learning_rate):\n",
+    "def train_MLP_batch(trainloader: DataLoader, testloader: DataLoader, n_epochs: int, learning_rate: float):\n",
+    "    \"\"\"\n",
+    "    Trains a model using the MLP architecture defined above\n",
+    "\n",
+    "    Args:\n",
+    "        trainloader (Datalodaer): PyTorch Dataloader object with training set\n",
+    "        testloader (Dataloader): PyTorch Dataloader object with testing set\n",
+    "        n_epochs (int): Number of epochs\n",
+    "        learning_rate (float): Learning rate of model\n",
+    "\n",
+    "    Returns:\n",
+    "        train_losses (list): List of train losses over n_epochs\n",
+    "        test_losses (list): List of test losses over n_epochs\n",
+    "        accuracies (list): List of accuracies over n_epochs\n",
+    "        model (Hangul_MLP): Trained MLP model\n",
+    "    \"\"\"\n",
     "\n",
     "    model = Hangul_MLP(input_size = 784, num_classes = 30).to(device)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
@@ -341,7 +356,7 @@
     "                train_loss = criterion(train_outputs, labels)\n",
     "                total_train_loss += train_loss.item()\n",
     "\n",
-    "            accuracies[epoch] = correct_preds / len(testloader.dataset) * 100 \n",
+    "            accuracies[epoch] = correct_preds / len(testloader.dataset) * 100 # type: ignore\n",
     "            test_losses[epoch] = total_test_loss / len(testloader)\n",
     "            train_losses[epoch] = total_train_loss / len(trainloader)\n",
     "\n",
@@ -412,7 +427,7 @@
     "\n",
     "    n_epochs = 300\n",
     "\n",
-    "    train_losses, test_losses, accuracies, model = run_MLP_batch(train_loader, test_loader, n_epochs, 0.8)\n",
+    "    train_losses, test_losses, accuracies, model = train_MLP_batch(train_loader, test_loader, n_epochs, 0.8)\n",
     "    torch.save(model.state_dict(), \"mlp.pth\")\n",
     "\n",
     "    plt.figure()\n",
@@ -595,11 +610,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_LeNet(trainloader, testloader, n_epochs, learning_rate):\n",
+    "def train_LeNet(trainloader: DataLoader, testloader: DataLoader, n_epochs: int, learning_rate: float):\n",
+    "    \"\"\"\n",
+    "    Trains a model using the LeNet5 architecture\n",
+    "\n",
+    "    Args:\n",
+    "        trainloader (Datalodaer): PyTorch Dataloader object with training set\n",
+    "        testloader (Dataloader): PyTorch Dataloader object with testing set\n",
+    "        n_epochs (int): Number of epochs\n",
+    "        learning_rate (float): Learning rate of model\n",
+    "\n",
+    "    Returns:\n",
+    "        train_losses (list): List of train losses over n_epochs\n",
+    "        test_losses (list): List of test losses over n_epochs\n",
+    "        accuracies (list): List of accuracies over n_epochs\n",
+    "        model (LeNet): Trained LeNet model\n",
+    "    \"\"\"\n",
     "    model = LeNet(num_classes = 30).to(device)\n",
     "    criterion = nn.CrossEntropyLoss()\n",
     "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
@@ -640,7 +670,7 @@
     "                train_loss = criterion(train_outputs, labels)\n",
     "                total_train_loss += train_loss.item()\n",
     "            \n",
-    "            accuracies[epoch] = correct_preds / len(testloader.dataset) * 100\n",
+    "            accuracies[epoch] = correct_preds / len(testloader.dataset) * 100 # type: ignore\n",
     "            test_losses[epoch] = total_test_loss / len(testloader)\n",
     "            train_losses[epoch] = total_train_loss / len(trainloader)\n",
     "            \n",
